Ability to read section information.
